--- a/team.html
+++ b/team.html
@@ -284,7 +284,7 @@
                 <div class="col-md-3 col-sm-12">
                     <div class="welcome-section text-center">
                         
-                        <img src="https://ik.imagekit.io/p2slevyg1/Untitled%20design%20(86).png?updatedAt=1747977270256" class="img-responsive" alt="..">
+                        <img src="https://ik.imagekit.io/p2slevyg1/Untitled%20design%20(87).png?updatedAt=1747977676197" class="img-responsive" alt="..">
                        
                         <h3>ASMA QAMAR<span ><p style="margin-top: -13px; font-size: 15px; color: black; text-transform: none; ">Process Analyst | Admission Tech</p></span></h3>
                     </div>
@@ -357,7 +357,7 @@
             <!-- row 4  -->
             <div class="row">
                 <div class="col-md-12 welcome-section text-center">
-                    <h3 style="font-weight: 700;">Mandi Bahauddin Branch Head</h3>
+                    <h3 style="font-weight: 700;">MD - Mandi Bahauddin Branch </h3>
                     <div class="border"></div>
                 </div>
                 <div class="col-md-4"></div>
