--- a/team.html
+++ b/team.html
@@ -184,7 +184,7 @@
 
     <section id="about-us" class="about-us-section-1">
         <div class="container">
-             <div class="row">
+             <!-- <div class="row">
                 <div class="col-md-12 welcome-section text-center">
                 <h3 style="font-weight: 700;">Our Leaders</h3>
                 <div class="border"></div>
@@ -212,7 +212,7 @@
                     </div>
                 </div>
                 <div class="col-md-2"></div>
-             </div>
+             </div> -->
              <br>
              <br>
              <br>
