--- a/contact.html
+++ b/contact.html
@@ -252,8 +252,8 @@
                     <div class="footer-contact-info">
                         <h4>Contact info</h4>
                         <ul>
-                            <li><strong>E-mail :</strong> ansabmahmood@adiuvoconsultants.net</li>
-                            <li><strong>Phone :</strong> +92 322 2333909</li>
+                            <li><strong>E-mail :</strong> ahmedbilal@adiuvoconsultants.net</li>
+                            <li><strong>Phone :</strong> +92 322 4408899</li>
                             <li><strong> Head Office Address :</strong> M-51 1st Floor Garden Heights, New Garden Town Lahore</li>
                            
                         </ul>
