--- a/studyDestination.html
+++ b/studyDestination.html
@@ -268,7 +268,7 @@
                     alt=""
                   />
                   <div class="portfolio-caption">
-                    <a href="studyInCanada.html"><h2>Study In Canada</h2> </a>
+                    <a href="#"><h2>Study In Canada</h2> </a>
                     <!-- <a href="#portfolio-modal" data-toggle="modal" class="link-1"><i class="fa fa-magic"></i></a> -->
                     <!-- <a href="#" class="link-2"><i class="fa fa-link"></i></a> -->
                   </div>
@@ -283,7 +283,7 @@
                     alt=""
                   />
                   <div class="portfolio-caption">
-                    <a href="studyInIreland.html"><h2>Study In Ireland</h2> </a>
+                    <a href="#"><h2>Study In Ireland</h2> </a>
                     <!-- <a href="#portfolio-modal" data-toggle="modal" class="link-1"><i class="fa fa-magic"></i></a> -->
                     <!-- <a href="#" class="link-2"><i class="fa fa-link"></i></a> -->
                   </div>
