--- a/studyInAustralia.html
+++ b/studyInAustralia.html
@@ -224,7 +224,7 @@
               <h1 style="font-weight: 600; text-transform: none;">Why Choose Australia?</h1>
               <br>
               <p style="color: black;">
-                Explore world-renowned UK universities known for academic excellence, global recognition, and career-focused education.
+                Explore world-renowned Australia universities known for academic excellence, global recognition, and career-focused education.
               </p>
             </div>
 
@@ -442,7 +442,7 @@
             <div class="item active">
               <img
                 class="img-responsive"
-                src="https://ik.imagekit.io/p2slevyg1/UK%20(4).png?updatedAt=1747594869919"
+                src="https://ik.imagekit.io/p2slevyg1/Untitled%20design%20-%202025-06-12T102101.228.png?updatedAt=1749705682656"
              width="100%"
          
                 
