--- a/studyInUSA.html
+++ b/studyInUSA.html
@@ -442,7 +442,7 @@
             <div class="item active">
               <img
                 class="img-responsive"
-                src="https://ik.imagekit.io/p2slevyg1/UK%20(4).png?updatedAt=1747594869919"
+                src="https://ik.imagekit.io/p2slevyg1/Untitled%20design%20-%202025-06-12T101848.655.png?updatedAt=1749705544632"
              width="100%"
          
                 
